# sentinel-os

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/mcp-proxy/: Cargo.toml
crates/mcp-proxy/src/: main.rs
crates/mcp-upstream-echo/: Cargo.toml
crates/mcp-upstream-echo/src/: main.rs
crates/seatbelt-core/: Cargo.toml
crates/seatbelt-core/src/: policy.rs
crates/sentinel-core/: Cargo.toml
crates/sentinel-core/src/: canon.rs  chain.rs  crypto.rs  lib.rs  models.rs  proof.rs  verify.rs
crates/sentinel-core/tests/: chain_verify_tests.rs  proof_verify_tests.rs
crates/sentinelctl/: Cargo.toml
crates/sentinelctl/src/: main.rs
crates/sentineld/: Cargo.toml
crates/sentineld/src/: api.rs  db.rs  keys.rs  main.rs
docs/: DECISIONS.md  INVARIANTS.md  PROJECT_STATE.md  PROJECT_STATE_v0.1.0.md  ROADMAP.md  spec-v0.1.md  threat-model-v0.1.md
docs/integrations/: README.md
examples/claude-desktop-filesystem-proxy/: verify.sh
policy/: policy.json
