[workspace]
resolver = "2"

members = [
  "crates/sentinel-core",
  "crates/sentineld",
  "crates/sentinelctl",
  "crates/seatbelt-core",
  "crates/mcp-proxy", "crates/mcp-upstream-echo",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/himanshudongre/sentinel-os"
