[package]
name = "sentinel-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
time = { version = "0.3", features = ["serde", "formatting"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
proptest = "1"
