[package]
name = "sentinelctl"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
sentinel-core = { path = "../sentinel-core" }

reqwest = { version = "0.12", features = ["blocking", "json"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

base64 = "0.22"

uuid = { version = "1", features = ["v4"] }
ed25519-dalek = "2"
