[package]
name = "sentineld"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
sentinel-core = { path = "../sentinel-core" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }

rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

ed25519-dalek = "2"
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }
